--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,15 @@ body {
 .flex {
     display: flex;
 }
+.api-name-area {
+    width: 200px;
+}
+.url-area {
+    width: 600px;
+}
 
 .biko-area {
-    width: 400px;
+    width: 300px;
 }
 
 .chat-example {
